--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 email=devopstrainingblr@gmail.com
 #always-auth=true
-#_auth=YWRtaW46c2hhaWx1NzczMQ==
+_auth=YWRtaW46c2hhaWx1NzczMQ=
 //registry.npmjs.org/:_auth=bWl0aHVudGVjaG5vbG9naWVzOmRldm9wcw==
 allowRepublish=true
